Updated dependencies, added dependency tracker, removed spdx