@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>17.2.1-SNAPSHOT</version>
+  <version>17.3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
@@ -20,31 +20,34 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <license.inceptionYear>2024</license.inceptionYear>
+    <license.inceptionYear>2025</license.inceptionYear>
     <license.licenseName>Apache License, Version 2.0</license.licenseName>
 
     <sonarTypeServer>ossrh1</sonarTypeServer>
     <sonarTypeHost>s01.oss.sonatype.org</sonarTypeHost>
     
     <sonar.host.url>http://localhost:9000</sonar.host.url>
+
+    <dependencyTrackUrl>http://localhost:8081</dependencyTrackUrl>
+    <dependencyTrackKey>${env.DEPENDENCY_TRACK_KEY}</dependencyTrackKey>
     
     <javaRelease>17</javaRelease>
     
-    <javadocPluginVersion>3.10.0</javadocPluginVersion>
-    <jxrPluginVersion>3.5.0</jxrPluginVersion>
+    <javadocPluginVersion>3.11.3</javadocPluginVersion>
+    <jxrPluginVersion>3.6.0</jxrPluginVersion>
     <jdependPluginVersion>2.1</jdependPluginVersion>
-    <checktylePluginVersion>3.5.0</checktylePluginVersion>
-    <pmdPluginVersion>3.25.0</pmdPluginVersion>
-    <spotbugsPluginVersion>4.8.6.4</spotbugsPluginVersion>
-    <sbcontribPluginVersion>7.6.4</sbcontribPluginVersion>
-    <findsecbugsPluginVersion>1.13.0</findsecbugsPluginVersion>
-    <jacocoPluginVersion>0.8.12</jacocoPluginVersion>
+    <checktylePluginVersion>3.6.0</checktylePluginVersion>
+    <pmdPluginVersion>3.27.0</pmdPluginVersion>
+    <spotbugsPluginVersion>4.9.3.2</spotbugsPluginVersion>
+    <sbcontribPluginVersion>7.6.13</sbcontribPluginVersion>
+    <findsecbugsPluginVersion>1.14.0</findsecbugsPluginVersion>
+    <jacocoPluginVersion>0.8.13</jacocoPluginVersion>
      
-    <junitVersion>5.11.1</junitVersion>
-    <junitPlatformVersion>1.11.1</junitPlatformVersion>
-    <mockitoVersion>5.14.0</mockitoVersion>
-    <log4jVersion>2.23.1</log4jVersion>
-    <cucumberVersion>7.19.0</cucumberVersion>
+    <junitVersion>5.13.4</junitVersion>
+    <junitPlatformVersion>1.13.4</junitPlatformVersion>
+    <mockitoVersion>5.19.0</mockitoVersion>
+    <log4jVersion>2.25.1</log4jVersion>
+    <cucumberVersion>7.27.2</cucumberVersion>
   </properties>
 
   <profiles>
@@ -62,7 +65,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.2.7</version>
+            <version>3.2.8</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -83,7 +86,7 @@
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
-            <version>0.10.3</version>
+            <version>0.11.0</version>
             <extensions>true</extensions>
             <executions>
               <execution>
@@ -113,7 +116,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
-            <version>3.4.1</version>
+            <version>3.5.1</version>
             <executions>
               <execution>
                 <id>java-agent</id>
@@ -204,23 +207,24 @@
   </repositories>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.4.0</version>
+        <version>3.5.0</version>
       </plugin>
       
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.17.1</version>
+        <version>2.18.0</version>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>3.1.3</version>
+        <version>3.1.4</version>
       </plugin>
 
       <plugin>
@@ -232,7 +236,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
+        <version>3.14.0</version>
         <configuration>
           <fork>true</fork>
           <showDeprecation>true</showDeprecation>
@@ -266,10 +270,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.3</version>
         <configuration>
           <forkCount>1</forkCount> <!-- 0 -->
           <trimStackTrace>false</trimStackTrace>
+          <argLine>--add-reads org.mockito=java.xml</argLine>
         </configuration>
         <dependencies>
           <dependency>
@@ -284,7 +289,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.3</version>
         <dependencies>
           <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -309,7 +314,7 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>4.0.0.4121</version>
+        <version>5.1.0.4751</version>
       </plugin>
 
       <plugin>
@@ -324,7 +329,6 @@
             </manifestEntries>
             <addMavenDescriptor>false</addMavenDescriptor>
           </archive>
-          <finalName>${project.artifactId}</finalName>
         </configuration>
       </plugin>
 
@@ -385,7 +389,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.1.3</version>
+        <version>3.1.4</version>
         <executions>
           <execution>
             <id>default-deploy</id>
@@ -400,7 +404,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>2.4.0</version>
+        <version>2.6.0</version>
         <configuration>
           <addSvnKeyWords>false</addSvnKeyWords>
           <licenseName>Apache License, Version 2.0</licenseName>
@@ -424,7 +428,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.6.1</version>
         <executions>
           <execution>
             <id>enforce</id>
@@ -485,7 +489,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.12.1</version>
+        <version>3.21.0</version>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
@@ -496,7 +500,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctor-maven-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.2.0</version>
           </dependency>
           -->
         </dependencies>
@@ -524,7 +528,7 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.17.0</version>
+        <version>1.20.2</version>
         <configuration>
           <timestampedReports>false</timestampedReports>
         </configuration>
@@ -532,7 +536,7 @@
           <dependency>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-junit5-plugin</artifactId>
-            <version>1.2.1</version>
+            <version>1.2.3</version>
           </dependency>
 
         </dependencies>
@@ -541,7 +545,7 @@
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>output-html</id>
@@ -579,15 +583,21 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-pdf</artifactId>
-            <version>2.3.18</version>
+            <version>2.3.19</version>
           </dependency>
           
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-diagram</artifactId>
-            <version>2.3.1</version>
+            <version>3.0.1</version>
           </dependency>
-                    
+                  
+          <dependency>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoctorj-diagram-plantuml</artifactId>
+            <version>1.2025.3</version>
+          </dependency>
+  
         </dependencies>
 
       </plugin>
@@ -748,26 +758,9 @@
       </plugin>
 
       <plugin>
-        <groupId>org.spdx</groupId>
-        <artifactId>spdx-maven-plugin</artifactId>
-        <version>0.7.4</version>
-        <executions>
-          <execution>
-            <id>build-spdx</id>
-            <goals>
-              <goal>createSPDX</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <outputFormat>RDF/XML</outputFormat>
-        </configuration>
-      </plugin>
-      
-      <plugin>
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>2.9.1</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -783,17 +776,23 @@
         </configuration>
       </plugin>
 
-      <!--
       <plugin>
         <groupId>io.github.pmckeown</groupId>
         <artifactId>dependency-track-maven-plugin</artifactId>
-        <version>1.7.0</version>
+        <version>1.10.2</version>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>upload-bom</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <dependencyTrackBaseUrl>http://localhost:8081</dependencyTrackBaseUrl>
-          <apiKey>API_KEY</apiKey>
+          <dependencyTrackBaseUrl>${dependencyTrackUrl}</dependencyTrackBaseUrl>
+          <apiKey>${dependencyTrackKey}</apiKey>
         </configuration>
       </plugin>
-      -->
 
       <plugin>
         <groupId>org.apache.rat</groupId>
@@ -809,7 +808,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.9.0</version>
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
         </configuration>
@@ -818,7 +817,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.3</version>
         <configuration>
         </configuration>
       </plugin>
@@ -923,7 +922,7 @@
       <plugin>
         <groupId>org.owasp</groupId>
         <artifactId>dependency-check-maven</artifactId>
-        <version>10.0.4</version>
+        <version>12.1.3</version>
         <configuration>
           <nvdApiServerId>nvd</nvdApiServerId>
         </configuration>
@@ -1009,7 +1008,7 @@
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
-      <version>4.8.6</version>
+      <version>4.9.4</version>
     </dependency>
 
     <dependency>
